--- a/src/React/package.json
+++ b/src/React/package.json
@@ -8,27 +8,34 @@
     "demo",
     "webpack"
   ],
-  "scripts": {"webpack": "webpack"},
+  "scripts": {
+    "webpack": "webpack",
+    "start": "node ./server.js",
+    "test": "npm install -g"
+  },
   "author": "Ruan Yifeng",
   "license": "MIT",
   "dependencies": {
+    "npm": "^3.0.0",
+    "node": "^4.2.0",
+    "amazeui-touch": "latest",
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
-    "bundle-loader": "^0.5.4",
-    "css-loader": "~0.16.0",
-    "file-loader": "~0.8.4",
-    "history": "^1.17.0",
-    "html-webpack-plugin": "~1.6.2",
-    "jquery": "~2.1.4",
-    "jsx-loader": "~0.13.2",
-    "open-browser-webpack-plugin": "0.0.1",
+    "css-loader": "^0.17.0",
+    "exports-loader": "^0.6.2",
+    "gulp": "^3.9.0",
+    "gulp-webpack": "^1.5.0",
+    "jsx-loader": "^0.13.2",
+    "path": "^0.11.14",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.12.1",
+    "classnames": "2.2.5",
     "react": "15.1.0",
     "react-dom": "15.1.0",
-    "react-router": "^1.0.3",
-    "style-loader": "~0.12.3",
-    "url-loader": "~0.5.6",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "^1.10.1"
+    "del": "^2.2.0",
+    "react-hot-loader": "1.3.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": "ruanyf/webpack-demos"
+, "-vs-binding":{"Clean":["install"]}
 }
