--- a/src/React/package.json
+++ b/src/React/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "webpack": "webpack",
-    "start": "node ./server.js",
+    "start": "node server.js",
     "test": "npm install -g"
   },
   "author": "Ruan Yifeng",
