--- a/src/React-Hot/package.json
+++ b/src/React-Hot/package.json
@@ -39,7 +39,8 @@
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1",
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "pubsub-js": "^1.5.3"
   },
   "dependencies": {
     "react": "^0.14.6",
