--- a/src/React-Hot/package.json
+++ b/src/React-Hot/package.json
@@ -40,11 +40,17 @@
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1",
     "classnames": "^2.2.5",
-    "pubsub-js": "^1.5.3"
+    "pubsub-js": "^1.5.3",
+    "react-addons-css-transition-group": "^15.2.1",
+    "style-loader": "0.13.1",
+    "css-loader": "^0.17.0",
+    "blacklist": "^1.1.4",
+    "webpack-zepto": "0.0.1",
+    "jquery": "^3.1.0"
   },
   "dependencies": {
     "react": "^0.14.6",
     "react-dom": "^0.14.6"
-  }
-, "-vs-binding":{"Clean":["start"]}
+  },
+  "-vs-binding": { "Clean": [ "start", "install" ] }
 }
