--- a/src/React/package.json
+++ b/src/React/package.json
@@ -34,8 +34,10 @@
     "react-dom": "15.1.0",
     "del": "^2.2.0",
     "react-hot-loader": "1.3.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "react-addons-css-transition-group": "^15.2.1",
+    "style": "^0.0.3"
   },
   "repository": "ruanyf/webpack-demos"
-, "-vs-binding":{"Clean":["install"]}
+, "-vs-binding":{"Clean":["install","webpack"]}
 }
